--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+milestones
+./components/Milestones.css
+./components/Milestones.js
+
+projects
+./components/Projects.js
+./components/Projects.css
